# agent-sandbox

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.android.yml  docker-compose.gmessages-mcp.yml  docker-compose.remote.yml  docker-compose.traefik.yml  docker-compose.whatsapp-mcp.yml  docker-compose.yml
.claude/commands/: build.md  logs.md  restart.md  test.md
core/: Dockerfile  clipboard-sync.js  entrypoint.sh
core/api/: cdp.py  main.py  requirements.txt
core/api/routers/: browser.py  files.py  google_messages.py  outlook.py  shell.py  whatsapp.py
core/mcp_server/: requirements.txt  server.py
core/mcp_server/tools/: __init__.py  android.py  browser.py  google_messages.py  outlook.py  system.py  whatsapp.py
core/nginx/: nginx.conf
core/nginx/conf.d/: default.conf  (+1 more)
core/stealth-extension/: manifest.json  stealth.js
core/supervisord/: supervisord.conf
mcp/: README.md
mcp/tools/: android.py  browser.py
modules/android/: README.md  docker-compose.yml  install.sh
modules/browser/: supervisord.conf
modules/gmessages-mcp/: Dockerfile  entrypoint.sh
modules/sms/: requirements.txt  sms_webhook.py  supervisord.conf
modules/teams/: supervisord.conf
modules/vscode/: supervisord.conf
modules/whatsapp-mcp/: Dockerfile  entrypoint.sh  mcp_server.py  requirements.txt
scripts/: disable-module.sh  enable-module.sh  login.sh  run-local.sh
sdk/: README.md  __init__.py  client.py  pyproject.toml
skills/read-google-messages/: SKILL.md
skills/read-outlook/: SKILL.md
skills/read-whatsapp/: SKILL.md
tests/: e2e.py
(+7 files in other folders)
