[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sandbox-client"
version = "0.1.0"
description = "Python SDK for the agent-sandbox REST API"
requires-python = ">=3.10"
dependencies = []   # stdlib only

[project.urls]
Repository = "https://github.com/pesnik/agent-sandbox"

[tool.setuptools.packages.find]
where = ["."]
include = ["sdk*"]
